2010-06-28  Fabrice NICOL  <fabnicol@users.sourceforge.net>
 	* Cut down --topmenu-palette to 3 suboptions, change in separators (, -> :)
	* Add: --background-colors in rgb mode, as meny menus.
	* Redesign of temporary file memory allocation and override on command line.
	* Redesign of log output with Windows porting by CreateThread
	* Add: Html log (new switch --loghtml)

2010-06-26  Fabrice NICOL
	* Fix --topvob in new context
	* Dev: test multi-screen menus with active menus --> new algorithm in view
	* Cygwin builds for dvdauthor.


2010-06-24  Fabrice NICOL
	* Fix: AUDIO_SV overgeneration with --menustyle hierarchical
	* fix: bug in new-style call to MP2ENC
	* fix: --nmenus > 2 (has to specify default relation between img->nmenus and img->ncolumns)
	* restrict active menus to simple screens
	* fix regression and redesign: --log(=file), --logrefresh(=file) with optional arguments.
	* clean up deprecated switches: --lossy-rounding, --pad-cont, --minimal-padding, --no-padding

2010-06-23  Fabrice NICOL
	* Generalize binary path creation (for autotools-based builds, for IDEs, *nix/Windows)
	* fix --bindir etc. accordingly

2010-06-20  Fabrice NICOL
	* Fix --topvob
	* Add grey non-transparent .png backgrounds in menu/ --> change palettes accordingly.
	  This adds one possible parametric color (background)
	* Add --no-refresh-outdir and --no-refresh-tempdir to avoid erasing these directories
	  default behaviour being erasure on launch (new for tempdir).

2010-06-19  Fabrice NICOL
	* Add: --datadir and improve behaviour of --workdir
	* Recast: --palette and --colors into --topmenu-palette and --topmenu-colors
	* Add: --activemenu-palette and revise information on palette customization and defaults in commonvars.h
	* Change: --logrefresh into --log=refresh
	* Change: short options into -0 to -9
	* Fix: home environment variable trouble
	* Windows porting enhancement or bug fixes
	* More tests

2010-06-16  Fabrice NICOL
	* Stabilize and fix --menustyle active
