@@ -204,6 +204,7 @@ c:\dvda-author-10.06\spumux -v 2 c:\newtempdir\spu_xmltemp_3.xml < c:\newtempdir
 		<Unit filename="../../m4/dvda.m4" />
 		<Unit filename="../../script.in" />
 		<Unit filename="../../script1.in" />
+		<Unit filename="../../script2.in" />
 		<Unit filename="../../src/Makefile.am" />
 		<Unit filename="../../src/amg2.c">
 			<Option compilerVar="CC" />
