@@ -2,7 +2,7 @@
 <CodeBlocks_layout_file>
 	<ActiveTarget name="" />
 	<File name="../../libutils/src/c_utils.c" open="1" top="0" tabpos="1">
-		<Cursor position="12335" topLine="459" />
+		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../libutils/src/include/c_utils.h" open="1" top="0" tabpos="2">
 		<Cursor position="0" topLine="0" />
